# tapgen

./: Cargo.toml  README.md
src/: config.rs  copy.rs  generate.rs  git.rs  lib.rs  main.rs  metadata.rs  prefix.rs  prompt.rs  template.rs  utils.rs  variable.rs
