[package]
name = "tapgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.2.7", features = ["derive", "string", "std", "help", "usage", "error-context", "suggestions"], default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
glob = "0.3.1"
home = "0.5.5"
indexmap = "2.1.0"
memchr = "2.6.4"
minijinja = { git = "https://github.com/mitsuhiko/minijinja.git", branch = "main", features = ["loader"] }
regex = "1.10.0"
serde = { version = "1.0.166", features = ["derive"] }
shlex = "1.2.0"
tempfile = "3.8.1"
thiserror = "1.0.40"
toml = { version = "0.8.8", features = ["preserve_order"] }
walkdir = "2.4.0"
