[package]
name = "tapgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
glob = "0.3.1"
home = "0.5.5"
indexmap = "2.1.0"
memchr = "2.6.4"
regex = "1.10.0"
tempfile = "3.8.1"
thiserror = "1.0.40"
walkdir = "2.4.0"

[dependencies.chrono]
version = "0.4.31"
default-features = false
features = ["alloc", "std", "clock"]

[dependencies.clap]
version = "4.2.7"
default-features = false
features = ["derive", "string", "std", "help", "usage", "error-context", "suggestions"]

[dependencies.dialoguer]
version = "0.11.0"
default-features = false

[dependencies.minijinja]
branch = "main"
features = ["loader", "urlencode"]
git = "https://github.com/mitsuhiko/minijinja.git"

[dependencies.serde]
version = "1.0.166"
features = ["derive"]

[dependencies.toml]
version = "0.8.8"
features = ["preserve_order"]
